--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -392,13 +392,17 @@
     
   </section>
 
-  <section class="team">
+<section class="team">
     <div class="container">
       <div class="page-section">
         <h2 class="page-section__title">PROJECTS</h2>
         <img class="page-section__title-style" src="{% static '/images/title-style.png' %}" alt="">
-        <p class="page-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-        <div class="row gutters-40">
+        <p class="page-section__paragraph">Throughout my career, I have had the opportunity to work on 
+          a diverse range of projects that showcase my skills and passion for problem-solving.
+           From web development, design & marketing software solutions, I have consistently focused on delivering high-quality, user-centered 
+           results. My projects often involve collaboration with cross-functional teams, an eye for 
+           detail, and a commitment to meeting both client expectations and business goals.  </p>
+        <div class="row gutters-80">
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
               <img class="img-responsive" src="{% static '/images/ther.png' %}" alt="">
@@ -408,37 +412,13 @@
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
-                    <h4 style="padding-left: 0;" class="team__single-section__name">Opportune</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">Django</p>
-                    <p class="team__single-section--backPage__title">Adobe Photoshop <span class="team__single-section--backPage__percent90">90&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:90%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">Adobe Illustrator <span class="team__single-section--backPage__percent80">80&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">After Effect <span class="team__single-section--backPage__percent70">70&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:70%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
+                    <h4 style="padding-left: 0;" class="team__single-section__name">Mobile Application</h4>
+                    <p style="padding-left: 0;" class="team__single-section__title">An application built to solve mental health issues among the young population</p>
+                   
+                    
+                   
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                    <div class="social-icons">
-                      <ul>
-                        <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
-                      </ul>
-                    </div>
+                   
                   </div>
                 </div>
               </div>
@@ -452,37 +432,11 @@
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
-                    <h4 style="padding-left: 0;" class="team__single-section__name">PAULA R. MULLINS</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">FOUNDER</p>
-                    <p class="team__single-section--backPage__title">Adobe Photoshop <span class="team__single-section--backPage__percent90">90&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:90%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">Adobe Illustrator <span class="team__single-section--backPage__percent80">80&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">After Effect <span class="team__single-section--backPage__percent70">70&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:70%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
+                    <h4 style="padding-left: 0;" class="team__single-section__name">Website</h4>
+                    <p style="padding-left: 0;" class="team__single-section__title"> A site to help small startups and entreprenuers to advertise their products and also make it easier for funders to find right people who deserve funds for businesss plus narrowing the gap of unemployment</p>
+                    
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                    <div class="social-icons">
-                      <ul>
-                        <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
-                      </ul>
-                    </div>
+                    
                   </div>
                 </div>
               </div>
@@ -496,36 +450,11 @@
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
-                    <h4 style="padding-left: 0;" class="team__single-section__name">LEONARD D. DOWNING</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">FOUNDER</p>
-                    <p class="team__single-section--backPage__title">Adobe Photoshop <span class="team__single-section--backPage__percent90">90&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:90%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">Adobe Illustrator <span class="team__single-section--backPage__percent80">80&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">After Effect <span class="team__single-section--backPage__percent70">70&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:70%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
+                    <h4 style="padding-left: 0;" class="team__single-section__name">Mobile Application</h4>
+                    <p style="padding-left: 0;" class="team__single-section__title">An application built to help re-distribute agric products around the country through providing transport means to farmers at the list cost possible  </p>
+                   
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                    <div class="social-icons">
-                      <ul>
-                        <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
-                      </ul>
+                    
                     </div>
                   </div>
                 </div>
@@ -540,37 +469,13 @@
               <div class="team__overlay">
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
-                    <h4 style="padding-left: 0;" class="team__single-section__name">PAULA R. MULLINS</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">FOUNDER</p>
-                    <p class="team__single-section--backPage__title">Adobe Photoshop <span class="team__single-section--backPage__percent90">90&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:90%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">Adobe Illustrator <span class="team__single-section--backPage__percent80">80&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
-                    <p class="team__single-section--backPage__title">After Effect <span class="team__single-section--backPage__percent70">70&#37;</span></p>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:70%;background-color: #7F56FD;">
-                        <span class="progress-bar--dot-main"></span>
-                        <span class="progress-bar--dot"></span>
-                      </div>
-                    </div>
+                    <h4 style="padding-left: 0;" class="team__single-section__name">Mobile Application</h4>
+                    <p style="padding-left: 0;" class="team__single-section__title">An application meant to smoothen Medical operations through providing a platform for providing remote doctor appointments and mobile payments</p>
+                    
+                   
+                   
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                    <div class="social-icons">
-                      <ul>
-                        <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
-                        <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
-                      </ul>
-                    </div>
+                   
                   </div>
                 </div>
               </div>
@@ -585,11 +490,11 @@
     <div class="container">
       <div class="row">
         <div class="brand-logo__wrapper">
-          <li><img class="img-responsive" src="{% static '/images/brand-1.png' %}" alt=""></li>
-          <li><img class="img-responsive" src="{% static '/images/brand-2.png' %}" alt=""></li>
-          <li><img class="img-responsive" src="{% static '/images/brand-3.png' %}" alt=""></li>
-          <li><img class="img-responsive" src="{% static '/images/brand-4.png' %}" alt=""></li>
-          <li><img class="img-responsive" src="{% static '/images/brand-1.png' %}" alt=""></li>
+          <li><img class="img-responsive" src="{% static '/images/dj.jpg' %}" alt=""></li>
+          <li><img class="img-responsive" src="{% static '/images/hcbj.png' %}" alt=""></li>
+          <li><img class="img-responsive" src="{% static '/images/python.jpg' %}" alt=""></li>
+          <li><img class="img-responsive" src="{% static '/images/jupyter.png' %}" alt=""></li>
+          <li><img class="img-responsive" src="{% static '/images/figma.png' %}" alt=""></li>
         </div>
       </div>
     </div>
@@ -598,35 +503,36 @@
   <section class="blog">
     <div class="container">
       <div class="page-section">
-        <h2 class="page-section__title">BLOG POST</h2>
+        <h2 class="page-section__title">TECH-GROUPS</h2>
         <img class="page-section__title-style" src="{% static '/images/title-style.png' %}" alt="">
-        <p class="page-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="page-section__paragraph">I am actively involved in several tech communities that 
+          promote learning, networking, and collaboration within the technology space. Each group 
+          fosters unique opportunities to develop skills, connect with like-minded individuals and 
+          contribute to impactful projects. </p>
         <div class="row gutters-40">
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img class="img-responsive" src="{% static '/images/blog-1.png' %}" alt="">
-              <p class="blog__single__date">MAY 25 , 2017 </p>
-              <i class="material-icons">comment</i> 5
-              <a href="#"><h4 class="blog__single__title">HEADLINE LATEST WORLD NEWS</h4></a>
-              <p class="blog__single__paragraph">orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  Ut enim ad minim veniam <a href="#"><span class="blog__single__paragraph--read-more">READ MORE...</span></a></p>
+              <img class="img-responsive" src="{% static '/images/PYLADIES.png' %}" alt="">
+             
+          
+              <a href="#"><h4 class="blog__single__title">PYLADIES KAMPALA</h4></a>
+              <p class="blog__single__paragraph">Pyladies is an international mentorship group focused on empowering women in the Python open-source community. Activities include coding workshops, hackathons, and social meetups aimed at skill-building and fostering inclusivity within Python programming. Members participate in outreach and support initiatives to increase diversity in tech </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="{% static '/images/blog-2.png' %}" alt="">
-              <p class="blog__single__date">MAY 25 , 2017 </p>
-              <i class="material-icons">comment</i> 5
-              <a href="#"><h4 class="blog__single__title">HEADLINE LATEST WORLD NEWS</h4></a>
-              <p class="blog__single__paragraph">orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  Ut enim ad minim veniam <a href="#"><span class="blog__single__paragraph--read-more">READ MORE...</span></a></p>
+              <img src="{% static '/images/PYCON.jpeg' %}" alt="">
+            
+              <a href="#"><h4 class="blog__single__title">PYCON UGANDA</h4></a>
+              <p class="blog__single__paragraph"> Pycon Uganda organizes conferences and events dedicated to Python enthusiasts, offering workshops, panel discussions, and networking opportunities. These gatherings foster collaboration and knowledge-sharing among developers, academics, and industry experts passionate about Python </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="{% static '/images/blog-3.png' %}" alt="">
-              <p class="blog__single__date">MAY 25 , 2017 </p>
-              <i class="material-icons">comment</i> 5
-              <a href="#"><h4 class="blog__single__title">HEADLINE LATEST WORLD NEWS</h4></a>
-              <p class="blog__single__paragraph">orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  Ut enim ad minim veniam <a href="#"><span class="blog__single__paragraph--read-more">READ MORE...</span></a></p>
+              <img src="{% static '/images/GDSC.jpeg' %}" alt="">
+             
+              <a href="#"><h4 class="blog__single__title">GDSC MAKERERE</h4></a>
+              <p class="blog__single__paragraph">  The Google Developer Student Club (GDSC) at Makerere University focus on peer-to-peer learning and building real-world solutions. Activities include coding sessions, hackathons, and projects to empower students with technical and leadership skills for solving community challenges. </p>
             </div>
           </div>
         </div>
