--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -28,6 +28,9 @@ body{
   .container{
     width:1370px;
     margin: 0 auto;
+     display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
   }
 }
 
@@ -211,6 +214,7 @@ html,body {
 	margin-top: 100px;
 	margin-bottom: 100px;
   margin-top: 60px;
+  max-width: 1200px;
 }
 
 
@@ -864,7 +868,7 @@ letter-spacing: 1px;
 }
 
 .brand-logo__wrapper{
-  max-width: 1140px;
+  max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
 }
