--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -395,6 +395,7 @@
 <section class="team">
     <div class="container">
       <div class="page-section">
+        <div class="row g-3">
         <h2 class="page-section__title">PROJECTS</h2>
         <img class="page-section__title-style" src="{% static '/images/title-style.png' %}" alt="">
         <p class="page-section__paragraph">Throughout my career, I have had the opportunity to work on 
@@ -451,16 +452,13 @@
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
                     <h4 style="padding-left: 0;" class="team__single-section__name">Mobile Application</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">An application built to help re-distribute agric products around the country through providing transport means to farmers at the list cost possible  </p>
-                   
-                    <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                    
+                    <p style="padding-left: 0;" class="team__single-section__title">An application built to help re-distribute agric products around the country through providing transport means to farmers at the list cost possible  </p>                    
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+           
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
               <img src="{% static '/images/asiika.png' %}" alt="">
@@ -470,20 +468,18 @@
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
                     <h4 style="padding-left: 0;" class="team__single-section__name">Mobile Application</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title">An application meant to smoothen Medical operations through providing a platform for providing remote doctor appointments and mobile payments</p>
-                    
-                   
-                   
-                    <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
-                   
+                    <p style="padding-left: 0;" class="team__single-section__title">An application meant to smoothen Medical operations through providing a platform for providing remote doctor appointments and mobile payments</p>                   
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
     </div>
+  </div>
+    </div>
+    </body>
   </section>
 
   <section class="brand-logo brand-logo--bg">
