--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -42,9 +42,9 @@
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">SKILL</a></li> 
             <li><a href="#">PORTFOLIO</a></li> 
-            <li><a href="#">TEAM</a></li> 
-            <li><a href="#">BLOG</a></li> 
-            <li><a href="#">CONTACT</a></li> 
+            <li><a href="#">ACHIEVEMENTS</a></li> 
+            <li><a href="#">PROJECTS</a></li> 
+            <li><a href="#">TECH GROUPS</a></li> 
           </ul>
         </div>
       </nav>
@@ -52,20 +52,33 @@
         <span class="header__content__block">HELLO</span>
         <h1 class="header__content__title">I'M APARO CECILIA</h1>
         <ul class="header__content__sub-title">
-          <li>UI&#47;UX DESIGNER <span class="padding">&#45;</span></li>
+          <li>DATA ANALYST  <span class ="padding">&#45;</span></li>
           <li>WEB DEVELOPER <span class="padding">&#45;</span></li>
-          <li>GRAPHICS DESIGNER</li>
+          <li>UI&#47;UX DESIGNER </span></li>
         </ul>
         <a class="header__button" href="#">HAVE PROJECT? LET'S TALK</a>
       </div>
-      <div class="social-icon pull-right">
+
+
+      <!-- <div class="social-icon pull-right">
         <ul>
           <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
           <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
           <li><a href="#"><i class="flaticon-behance-logo"></i></a></li>
           <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
         </ul>
+      </div> -->
+
+
+
+      <div class="social-icon pull-right">
+        <ul>
+          <li><a href="https://www.linkedin.com/in/aparo-cecilia-8710bb254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://x.com/CecilHeavens"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://github.com/APAROCECILIA" class="github"><i class="fab fa-github"></i></a></li>
+        </ul>
       </div>
+
     </div>
   </header>
 
@@ -312,6 +325,7 @@
     <div class ="container">
       <div class = "page-section">
     <h2 class="page-section__title" style="color: #f9f9f9;">MY ACHIEVEMENTS</h2>
+    <img class="page-section__title-style" src="{% static 'images/title-style-white.png' %}" alt="">
     <div id="myCarousel" class="carousel container slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -434,7 +448,7 @@
                 <div class="team__overlay__content">
                   <div class="team__single-section--backPage">
                     <h4 style="padding-left: 0;" class="team__single-section__name">Website</h4>
-                    <p style="padding-left: 0;" class="team__single-section__title"> A site to help small startups and entreprenuers to advertise their products and also make it easier for funders to find right people who deserve funds for businesss plus narrowing the gap of unemployment</p>
+                    <p style="padding-left: 0;" class="team__single-section__title"> A platform for entreprenuers to advertise their products and make it easier for funders to find right people who deserve funds for businesses plus narrowing the gap of unemployment</p>
                     
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
                     
@@ -548,21 +562,11 @@
     <hr style="border: 0;border-top: 1px solid #525B60;display:block;margin-top: 40px;">
     <div class="container text-center">
       <div class="social-icon">
-        <!-- <ul>
-          <li><a href="#"><i class="flaticon-facebook-letter-logo"></i></a></li>
-          <li><a href="#"><i class="flaticon-twitter-logo"></i></a></li>
-          <li><a href="#"><i class="flaticon-behance-logo"></i></a></li>
-          <li><a href="#"><i class="flaticon-dribbble-logo"></i></a></li>
-        </ul> -->
-
         <ul>
           <li><a href="https://www.linkedin.com/in/aparo-cecilia-8710bb254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="fab fa-linkedin"></i></a></li>
           <li><a href="https://x.com/CecilHeavens"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://github.com/APAROCECILIA" class="github"><i class="fab fa-github"></i></a></li>
         </ul>
-        
-        
-
       </div>
       <p class="footer__paragraph">Copyright &copy; 2024 AparoCecilia , All Rights Reserved.</p>
     </div>
